--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AI_Project)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AI_Project main.cpp Algorithms/SearchAlgorithms.cpp Algorithms/SearchAlgorithms.h)
+add_executable(AI_Project main.cpp Algorithms/SearchAlgorithms.cpp Algorithms/SearchAlgorithms.h Algorithms/Node.cpp Algorithms/Node.h)
